Add modpack/settings and improve downloader
Introduce modpack and settings domain (ModpackInstaller, ModpackFile, ModpackManifest, PreparedLaunchStatus, LauncherSettings, SettingsStore) and update related tests and UI. Change MinecraftVersionDownloader to report progress with (percent, message) and implement the new contract in MojangVersionDownloader: richer progress messages, native extraction, stronger asset/library download handling and retries. Update LauncherService to surface status messages, validate natives to avoid false positives, log download errors, and adjust download lifecycle handling. Also apply small API/server/client and UI adjustments to accommodate these behaviors.