@@ -21,38 +21,30 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class LauncherServiceTest {
 
-    /** Crea un MinecraftVersionDownloader falso que simula una instalación mínima. */
     private static MinecraftVersionDownloader fakeDownloader() {
         return new MinecraftVersionDownloader() {
             @Override
             public void downloadVersion(String version, Path gameDir,
-                                        BiConsumer<Integer, String> progress)
+                                        BiConsumer<Integer, String> progressConsumer)
                     throws IOException {
-                progress.accept(30, "Descargando fake…");
-                // Crear estructura mínima: versions/{version}/{version}.jar y .json
+                progressConsumer.accept(30, "Descargando fake JAR...");
                 Path versionDir = gameDir.resolve("versions").resolve(version);
                 Files.createDirectories(versionDir);
-                Path jar  = versionDir.resolve(version + ".jar");
-                Path json = versionDir.resolve(version + ".json");
-                // ZIP magic bytes para pasar la validación de jar
-                Files.write(jar, new byte[]{'P', 'K', 3, 4, 0, 0, 0, 0});
-                Files.writeString(json, "{}");
-                progress.accept(100, "Listo");
+                Path jar = versionDir.resolve(version + ".jar");
+                Files.write(jar, new byte[]{'P', 'K', 3, 4, 0, 0, 0, 0, 0, 0});
+                progressConsumer.accept(100, "Descarga completada.");
             }
 
             @Override
             public VersionInstallation buildInstallation(String version, Path gameDir,
-                                                          String username) throws IOException {
-                Path versionDir = gameDir.resolve("versions").resolve(version);
-                Path jar        = versionDir.resolve(version + ".jar");
-                Path nativesDir = versionDir.resolve("natives");
-                Files.createDirectories(nativesDir);
+                                                         String username) {
+                Path jar = gameDir.resolve("versions").resolve(version).resolve(version + ".jar");
                 return new VersionInstallation(
                         List.of(jar),
                         "net.minecraft.client.main.Main",
                         List.of("-cp", jar.toAbsolutePath().toString()),
-                        List.of("--username", username, "--version", version),
-                        nativesDir
+                        List.of("--username", username),
+                        gameDir.resolve("natives")
                 );
             }
         };
@@ -72,11 +64,20 @@ class LauncherServiceTest {
                 ""
         );
         LauncherService service = new LauncherService(
-                config, new ProfileStore(config.profilesFile(), new ObjectMapper()));
+                config,
+                new ProfileStore(config.profilesFile(), new ObjectMapper())
+        );
 
         MinecraftProfile profile = new MinecraftProfile(
-                "default", "Perfil principal", "java", "1.20.1",
-                List.of("-Xmx2G"), List.of("--username", "Steve")
+                "default",
+                "Perfil principal",
+                "java",
+                "1.20.1",
+                List.of("-Xmx2G"),
+                List.of("--username", "Steve"),
+                "VANILLA",
+                "",
+                ""
         );
 
         service.createProfile(profile);
@@ -87,7 +88,7 @@ class LauncherServiceTest {
     }
 
     @Test
-    void shouldBuildLaunchResultWithCommandAndPrepareVersion() throws Exception {
+    void shouldBuildLaunchResultWithCommandAndPrepareVersion() {
         LauncherConfig config = new LauncherConfig(
                 tempDir,
                 tempDir.resolve("profiles.json"),
@@ -104,26 +105,18 @@ class LauncherServiceTest {
 
         try {
             service.createProfile(new MinecraftProfile(
-                    "pvp", "Perfil PvP", "java", "1.8.9",
-                    List.of("-Xmx1G"), List.of()));
+                    "pvp", "Perfil PvP", "java", "1.8.9", List.of("-Xmx1G"), List.of(),
+                    "VANILLA", "", ""
+            ));
 
-            var prep = service.prepareVersion("1.8.9");
-            int tries = 0;
-            while (!"DONE".equals(service.getDownloadStatus(prep.downloadId()).orElseThrow().state()) && tries < 20) {
-                Thread.sleep(100);
-                tries++;
-            }
+            LaunchResult result = service.prepareAndLaunch(new LaunchRequest("pvp", false));
+            Path versionJar = config.gameDirectory().resolve("versions").resolve("1.8.9").resolve("1.8.9.jar");
 
-            Path versionJar = config.gameDirectory()
-                    .resolve("versions").resolve("1.8.9").resolve("1.8.9.jar");
-            assertTrue(Files.exists(versionJar), "El JAR debe existir en: " + versionJar);
-            assertTrue(startsWithJarMagic(versionJar), "El JAR debe tener magic bytes PK");
-
-            LaunchResult result = service.launch(new LaunchRequest("pvp", false));
             assertNotNull(result.launchId());
             assertEquals("STARTED", result.status());
-            assertTrue(result.commandLine().contains(versionJar.toAbsolutePath().toString()),
-                    "El comando debe incluir el JAR: " + result.commandLine());
+            assertTrue(result.commandLine().contains(versionJar.toAbsolutePath().toString()));
+            assertTrue(Files.exists(versionJar));
+            assertTrue(startsWithJarMagic(versionJar));
         } finally {
             service.shutdown();
         }
@@ -133,8 +126,10 @@ class LauncherServiceTest {
         try {
             byte[] header = Files.readAllBytes(file);
             return header.length >= 4
-                    && header[0] == 'P' && header[1] == 'K'
-                    && header[2] == 3  && header[3] == 4;
+                    && header[0] == 'P'
+                    && header[1] == 'K'
+                    && header[2] == 3
+                    && header[3] == 4;
         } catch (IOException ex) {
             return false;
         }
